adding date to tweets

--- a/tweetBTC.ipynb
+++ b/tweetBTC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -39,62 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mega kriptos:RT @BetllerOfficial: #Bitcoin breakout? \n",
-      "\n",
-      "@coinkit_ mon 25 150 BTC https://t.co/M2qXZSws1p\n",
-      "boyes setiawan:RT @Uniswappro_org: ✅ Airdrop is LIVE\n",
-      "\n",
-      "Get Free 500$ UNIP\n",
-      "\n",
-      "Earn Extra 50$ UNIP for every referrral\n",
-      "\n",
-      "https://t.co/nOTPH70JTK\n",
-      "\n",
-      "#Airdrop #Unis…\n",
-      "mega kriptos:RT @BetllerOfficial: #Bitcoin is just 4900 USDT away from its ATH ( $19891 ) 🚀\n",
-      "\n",
-      "@coinkit_ mon 25 150 BTC\n",
-      "#btcusdt #betller https://t.co/Ugx…\n",
-      "Whale of Blockchain:RT @WhalePanda: Every #Bitcoin you sell now is being bought by a large institutional player that's desperately trying to accumulate as much…\n",
-      "The Bitcoin Matrix Podcast:RT @CedYoungelman: Are nuclear power plants suitable for #Bitcoin mining? \n",
-      "\n",
-      "How long before a state actor turns one towards #btc?\n",
-      "RockinFreelance:RT @bmurphypointman: #freelance #freelancer #freelancing #freelancers   #bitcoin Free shipping on purchases over $25 at #Amazon https://t.c…\n",
-      "Uncle Kingsley #GBPJPY:Protection of capital should be your first goal in currency market, once you master it, everything called profitabi… https://t.co/QyTyaO8TaG\n",
-      "CryptoNetsraC:RT @Scarlettt_Ok: New GIVEAWAY ! #Okcash $ok $BTC #ETH \n",
-      "“20” WINNERS 10 OK EACH. Valid until the next giveaway.\n",
-      "\n",
-      "RULES:\n",
-      "\n",
-      "1. Like and Retwee…\n",
-      "HappyShillmore:RT @pierre_rochard: @PeterSchiff @michael_saylor Publicly traded companies that hold zero bitcoin are just a gamble, under-capitalized and…\n",
-      "Timothy Nelson:RT @Verox_AI: #Bitcoin price is up 480,000x +48,000,000% since 2010 to today!..\n",
-      "\n",
-      "50,000$ invested 10 years ago into $btc are now worth 24,0…\n",
-      "The Bitcoin Matrix Podcast:RT @CedYoungelman: #Bitcoin is a gift.\n",
-      "HODL4:20:RT @tyler: #Bitcoin is looking awfully boring hovering between 18-19k. Feels like a tiger getting ready to pounce\n",
-      "Ali:There is one huge problem in the #crypto market and it is called \n",
-      "#bitcoin !\n",
-      "petru mikuska:🤝 Follow me on @betfury_io. Let's hunt for Bitcoins together! Get an exciting experience on #1 I-Gaming platform wi… https://t.co/MlKZteS1Di\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Search last 5 tweets to verify function\n",
-    "for tweet in api.search(q=\"#Bitcoin\", lang=\"en\", rpp=5):\n",
-    "    print(f\"{tweet.user.name}:{tweet.text}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,40 +50,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Collect tweets\n",
-    "tweets = tw.Cursor(api.search, q=search_words, lang=\"en\", since=date_since).items(500)"
+    "tweets = tw.Cursor(api.search, q=search_words, lang=\"en\", since=date_since, tweet_mode=\"extended\").items(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store to list\n",
-    "tweets_list = [tweet.text for tweet in tweets]"
+    "tweets_list = [[tweet.created_at, tweet.full_text] for tweet in tweets]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['#Bitcoin Price Drops $1,000 in Worst Sell-Off in a Week https://t.co/4ZrEPqlEJU https://t.co/zVsD70kPU2',\n",
-       " 'Michael Saylor bought the #Bitcoin top top top',\n",
-       " 'Wed Dec  9 06:37:11 2020 (12:27)\\nUSD : 18,168.24\\nWght: 0.0\\nBlk#: 660,586\\nSize: 1,297.3\\nTxs : 2,015\\nPool: 2,632 (3.7 MB)\\n#bitcoin',\n",
-       " '$BTC Latest Block Info: Block 660586 holds 2,015 transactions for a total of 19,945.95241 #Bitcoin including Block… https://t.co/FqzWr8xWl3',\n",
-       " 'Hauck &amp; Aufhäuser, one of the oldest banks in #Germany partnered with #Berlin-based Kapilendo to launch its first-e… https://t.co/Ya0xFxogWA']"
+       "[[datetime.datetime(2020, 12, 9, 4, 49, 15),\n",
+       "  'ANOTHER WIN!! 18 Months Straight!!https://t.co/EHBINKBRH6 Grow Your Bitcoin DAILY! #Bitcoin #BTC #Crypto #GrowYourBitcoin #MTI https://t.co/lNLqnYz7X7'],\n",
+       " [datetime.datetime(2020, 12, 9, 4, 49, 3),\n",
+       "  'MyEtherWallet Now Offers In-App Staking for Ethereum 2.0: One of Ethereum’s most popular software wallets, MyEtherWallet, is giving users access to Ethereum 2.0… https://t.co/ewIBdAUg4Z  | https://t.co/FHLhKCQA7o  | https://t.co/vqHPEDx05k #cryptocurrency #blockchain #Bitcoin'],\n",
+       " [datetime.datetime(2020, 12, 9, 4, 49, 2),\n",
+       "  'Wells Fargo report labels Bitcoin as speculative investment: “Cryptocurrency investing today is a bit like living in the early days of the 1850’s gold rush, which… https://t.co/ctnrj4oTyt  | https://t.co/FHLhKCQA7o  | https://t.co/vqHPEDx05k #cryptocurrency #blockchain #Bitcoin https://t.co/mil3hfCile'],\n",
+       " [datetime.datetime(2020, 12, 9, 4, 49),\n",
+       "  'Become an expert crypto day trader with these incredible tips.\\n\\nhttps://t.co/q2ghkd2hDo via StreetWise Journal\\n#Investing #Bitcoin'],\n",
+       " [datetime.datetime(2020, 12, 9, 4, 48, 42),\n",
+       "  'Have you heard of #Bitcoin ? https://t.co/cMFS3bkWwF']]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,17 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert list to datafram\n",
-    "df = pd.DataFrame(tweets_list, columns=['text'])"
+    "df = pd.DataFrame(tweets_list, columns=['date', 'text'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -184,75 +134,96 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>#Bitcoin Price Drops $1,000 in Worst Sell-Off ...</td>\n",
+       "      <td>2020-12-09 04:49:15</td>\n",
+       "      <td>ANOTHER WIN!! 18 Months Straight!!https://t.co...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Michael Saylor bought the #Bitcoin top top top</td>\n",
+       "      <td>2020-12-09 04:49:03</td>\n",
+       "      <td>MyEtherWallet Now Offers In-App Staking for Et...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Wed Dec  9 06:37:11 2020 (12:27)\\nUSD : 18,168...</td>\n",
+       "      <td>2020-12-09 04:49:02</td>\n",
+       "      <td>Wells Fargo report labels Bitcoin as speculati...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$BTC Latest Block Info: Block 660586 holds 2,0...</td>\n",
+       "      <td>2020-12-09 04:49:00</td>\n",
+       "      <td>Become an expert crypto day trader with these ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Hauck &amp;amp; Aufhäuser, one of the oldest banks...</td>\n",
+       "      <td>2020-12-09 04:48:42</td>\n",
+       "      <td>Have you heard of #Bitcoin ? https://t.co/cMFS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>@sunny051488 @RetirementRight @StealthQE4 Own ...</td>\n",
+       "      <td>2020-12-09 04:48:15</td>\n",
+       "      <td>@heydave7 Almost all money is entry in a datab...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>I'd rather buy 3,017,304 #Bitcoin sats https:/...</td>\n",
+       "      <td>2020-12-09 04:48:14</td>\n",
+       "      <td>@CoinCornerDanny #Bitcoin just does it's work ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Protection of capital should be your first goa...</td>\n",
+       "      <td>2020-12-09 04:48:12</td>\n",
+       "      <td>#bitcoin #forex #crypto #cryptocurrency #socia...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>There is one huge problem in the #crypto marke...</td>\n",
+       "      <td>2020-12-09 04:48:11</td>\n",
+       "      <td>@pierre_rochard @saifedean If only an instrume...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>🤝 Follow me on @betfury_io. Let's hunt for Bit...</td>\n",
+       "      <td>2020-12-09 04:48:03</td>\n",
+       "      <td>ANOTHER WIN!! 18 Months Straight!!https://t.co...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text\n",
-       "0  #Bitcoin Price Drops $1,000 in Worst Sell-Off ...\n",
-       "1     Michael Saylor bought the #Bitcoin top top top\n",
-       "2  Wed Dec  9 06:37:11 2020 (12:27)\\nUSD : 18,168...\n",
-       "3  $BTC Latest Block Info: Block 660586 holds 2,0...\n",
-       "4  Hauck &amp; Aufhäuser, one of the oldest banks...\n",
-       "5  @sunny051488 @RetirementRight @StealthQE4 Own ...\n",
-       "6  I'd rather buy 3,017,304 #Bitcoin sats https:/...\n",
-       "7  Protection of capital should be your first goa...\n",
-       "8  There is one huge problem in the #crypto marke...\n",
-       "9  🤝 Follow me on @betfury_io. Let's hunt for Bit..."
+       "                 date                                               text\n",
+       "0 2020-12-09 04:49:15  ANOTHER WIN!! 18 Months Straight!!https://t.co...\n",
+       "1 2020-12-09 04:49:03  MyEtherWallet Now Offers In-App Staking for Et...\n",
+       "2 2020-12-09 04:49:02  Wells Fargo report labels Bitcoin as speculati...\n",
+       "3 2020-12-09 04:49:00  Become an expert crypto day trader with these ...\n",
+       "4 2020-12-09 04:48:42  Have you heard of #Bitcoin ? https://t.co/cMFS...\n",
+       "5 2020-12-09 04:48:15  @heydave7 Almost all money is entry in a datab...\n",
+       "6 2020-12-09 04:48:14  @CoinCornerDanny #Bitcoin just does it's work ...\n",
+       "7 2020-12-09 04:48:12  #bitcoin #forex #crypto #cryptocurrency #socia...\n",
+       "8 2020-12-09 04:48:11  @pierre_rochard @saifedean If only an instrume...\n",
+       "9 2020-12-09 04:48:03  ANOTHER WIN!! 18 Months Straight!!https://t.co..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv\n",
+    "df.to_csv('bitcoinTweets.csv', index=False)"
    ]
   },
   {
