moving csv to resources

--- a/tweetBTC.ipynb
+++ b/tweetBTC.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "df.to_csv('bitcoinTweets.csv', index=False)"
+    "df.to_csv('/ResourcesbitcoinTweets.csv', index=False)"
    ]
   },
   {
