--- a/segment3_base_model.ipynb
+++ b/segment3_base_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "1    1325431680 2012-01-01 15:28:00  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,13 +146,13 @@
    "source": [
     "\n",
     "# Read in files\n",
-    "df = pd.read_csv('bitcoin_data.csv')\n",
+    "df = pd.read_csv('Resources/bitcoin_data.zip')\n",
     "\n",
     "# Display initial data\n",
     "df.head(10)\n",
     "\n",
     "# keep timestamp, high, low, weighted_price\n",
-    "df = df[['Timestamp', 'High', 'Low', 'Volume_(BTC)', 'Weighted_Price', 'Open', 'Close', 'Volume_(BTC)']].reset_index(drop=True)\n",
+    "df = df[['Timestamp', 'High', 'Low', 'Volume_(BTC)', 'Weighted_Price', 'Open', 'Close']].reset_index(drop=True)\n",
     "\n",
     "# preprocessing notes-- consider omitting data prior to Jan 1st, 2012 due to higher volatility \n",
     "# earlier in bitcoin's lifecycle\n",
@@ -2656,7 +2656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
